# getgreSQL

./: .gitignore  CMakeLists.txt
.claude/: CLAUDE.md
assets/css/: style.css
assets/css/src/: 00-variables.css  01-base.css  02-layout.css  03-components.css  04-editor.css  05-dataview.css  06-dashboard.css  07-polish.css  08-print.css
assets/js/: app.js  editor.js
assets/js/src/: 00-core.js  01-ui.js  02-editing.js  03-explain.js  04-erd.js  05-extras.js  06-dataview.js  07-editor.js
build-rel/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  getgresql
build-rel/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/: CompilerFlags.cmake  Dependencies.cmake  EmbedAssets.cmake
src/: main.cpp
src/api/: handlers_admin.cpp  handlers_admin.hpp  handlers_connections.cpp  handlers_connections.hpp  handlers_db.cpp  handlers_db.hpp  handlers_dv.cpp  handlers_dv.hpp  handlers_monitor.cpp  handlers_monitor.hpp  handlers_query.cpp  handlers_query.hpp  handlers_schema.cpp  handlers_schema.hpp  handlers_static.cpp  handlers_tree.cpp  handlers_tree.hpp  routes.hpp
src/config/: config.cpp  config.hpp  connections.cpp  connections.hpp
src/core/: expected.hpp  static_string.hpp  type_list.hpp  types.hpp
src/html/: escape.hpp  templates.hpp
src/http/: context.hpp  request.hpp  response.hpp  response_builder.hpp  router.hpp  server.cpp  server.hpp
src/pg/: catalog.cpp  catalog.hpp  connection.cpp  connection.hpp  monitor.cpp  monitor.hpp  pool.cpp  pool.hpp  result.cpp  result.hpp  result_cache.hpp  sql.hpp  sql_dsl.hpp
src/ssr/: component.hpp  component_registry.hpp  components.hpp  css_dsl.hpp  engine.hpp  html_dsl.hpp  js_dsl.hpp  page.hpp  safe_html.hpp  ui.hpp
src/ssr/components/: admin_pages.hpp  alert.hpp  badge.hpp  breadcrumbs.hpp  buttons.hpp  cell_editing.hpp  connections_css.hpp  context_menu.hpp  core_runtime.hpp  dashboard_css.hpp  dashboard_widgets.hpp  data_view.hpp  dataview_css.hpp  dv_edit.hpp  editor_css.hpp  erd_widget.hpp  explain_viz.hpp  health_card.hpp  htmx_vendor.hpp  layout_css.hpp  page_layout.hpp  polish_css.hpp  progress_bar.hpp  search_input.hpp  section_tabs.hpp  size_bar.hpp  stat_card.hpp  table.hpp  theme.hpp  tree_node.hpp  ui_helpers.hpp
src/ssr/components/themes/: all.hpp  amber_terminal.hpp  andromeda.hpp  ayu_dark.hpp  ayu_light.hpp  ayu_mirage.hpp  catppuccin_latte.hpp  catppuccin_mocha.hpp  cobalt2.hpp  cyberpunk.hpp  dracula.hpp  everforest.hpp  github_dimmed.hpp  gruvbox_dark.hpp  gruvbox_light.hpp  high_contrast.hpp  horizon.hpp  kanagawa.hpp  light.hpp  matrix.hpp  midnight.hpp  monokai.hpp  moonlight.hpp  night_owl.hpp  nord.hpp  one_dark.hpp  palenight.hpp  paper.hpp  poimandres.hpp  rose_pine.hpp  shades_of_purple.hpp  slack_dark.hpp  solarized_dark.hpp  solarized_light.hpp  synthwave.hpp  tokyo_night.hpp  tron.hpp  vitesse_dark.hpp
tests/: CMakeLists.txt  test_router.cpp  test_static_string.cpp
